--- a/index.html
+++ b/index.html
@@ -3,10 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Random number Guessing Game</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="main">
+        <div id="heading">Guessing Game !</div>
+        <button id="startBox">Start a new game</button>
+        <h3>Guess a number between 1-50:</h3>
+        <input type="number" id="userInput">
+        <button id="guessBtn">Guess</button>
+        <br>
+        <br>
+        <h3>You guessed number is too low</h3>
+        <p><b>Your Score: </b></p>
+        
+        <marquee behavior="scroll" direction="left"> Created By Suman Acharya</marquee>
+    </div>
     <script src="script.js"></script>
 </body>
-</html>
+</html> 
